# rtthread-rp2040

./: CMakeLists.txt  README.md  externals.cmake  flash.sh  gdb-server.sh
application/: CMakeLists.txt  main.cc
bsp/raspberry-pico/: .gdb_history  .sconsign.dblite  CMakeLists.txt  cconfig.h  rt-thread.map  rtconfig.h  sdk.cmake
bsp/raspberry-pico/board/: board.c
bsp/raspberry-pico/drivers/: drv_gpio.c  drv_gpio.h
bsp/raspberry-pico/patches/: 0001-Patch-crt0.S.patch  0002-weaken-malloc-wrappers.patch  0003-Do-not-call-static-variable-Constructors-too-early.patch  0004-call-exported-routines.patch
libcpu/: CMakeLists.txt
src/: CMakeLists.txt  heap_wrappers.c
